# Aikatsu-academy_Schedule

./: .gitignore  Actions  BUG_FIX_REPORT.md  README.md  README_TOKEN_UPDATE.md  SECURITY_IMPROVEMENT.md  config.ini.template  debug_schedule_data.json  debug_scraping.py  pyproject.toml  setup.ps1  update_token.bat  update_token.sh
.github/workflows/: sync-service-account.yml  sync.yml
docs/: AUTOMATION_MIGRATION_GUIDE.md  BUG_FIX_REPORT.md  FAQ.md  SERVICE_ACCOUNT_SETUP.md  SETUP.md
src/: gcal.py  main.py  scraper.py
utils/: log_analyzer.py  performance_test.py  scrape_only.py  test_log_analyzer.py  test_output.txt  token_monitor.py
